beets-466 fixed some spacing issues
Spacing of Nav Buttons and the Outlet were off, made those adjustments.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  width: calc(100vw - 250px);
+  width: 100%;
 }
 
 .App-logo {
